# tpp-mlir

./: CMakeLists.txt
benchmark/: aaa.py  bench.py  config_filter.py  driver.py  enhance.py  load_mlir.py  main.py  mlp.py  op_config.py  test.py  tuner.py  utils.py
benchmark/mlir/: mlp.mlir  simple_matmul.mlir  test.mlir
include/TPP/: CMakeLists.txt
include/TPP-c/: Dialects.h  Passes.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp  Passes.cpp
lib/TPP/: DefaultPipeline.cpp
lib/TPP/Runner/: MLIRBench.cpp  TppRunnerWrapper.cpp
lib/TPP/Transforms/Utils/: BuilderUtils.cpp  TensorInit.cpp  TensorInitFloat.cpp  TensorInitInt.cpp  VNNIUtils.cpp
python/: CMakeLists.txt  MainModule.cpp
python/tpp/dialects/: CheckOps.td  PerfOps.td  XsmmOps.td  check.py  perf.py  xsmm.py
